test-generator/tests/snapshots/rust/test_generated_array_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let arr: [i32; 3] = [1, 2, 3];

AST:
(source_file
  (let_declaration
    pattern: (identifier "arr")
    type: (array_type
      element: (primitive_type "i32")
      length: (integer_literal "3")
    )
    value: (array_expression
      (integer_literal "1")
      (integer_literal "2")
      (integer_literal "3")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "arr",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 8,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
