test-generator/tests/snapshots/rust/test_generated_char_literal.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let ch = 'c';

AST:
(source_file
  (let_declaration
    pattern: (identifier "ch")
    value: (char_literal "'c'")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "ch",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 7,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
