test-generator/tests/snapshots/rust/test_generated_for_expression.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
for item in vec { println!("{}", item); }

AST:
(source_file
  (expression_statement
    (for_expression
      pattern: (identifier "item")
      value: (identifier "vec")
      body: (block
        (expression_statement
          (macro_invocation
            macro: (identifier "println")
            (token_tree
              (string_literal ""{}""
                (string_content)
              )
              (identifier "item")
            )
          )
        )
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "item",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "vec",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 13,
                end_line: 1,
                end_column: 16,
            },
        },
        Usage {
            name: "println",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 19,
                end_line: 1,
                end_column: 26,
            },
        },
        Usage {
            name: "item",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 34,
                end_line: 1,
                end_column: 38,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
