test-generator/tests/snapshots/rust/test_generated_function_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let func: fn(i32) -> i32 = |x| x + 1;

AST:
(source_file
  (let_declaration
    pattern: (identifier "func")
    type: (function_type
      parameters: (parameters
        (primitive_type "i32")
      )
      return_type: (primitive_type "i32")
    )
    value: (closure_expression
      parameters: (closure_parameters
        (identifier "x")
      )
      body: (binary_expression
        left: (identifier "x")
        right: (integer_literal "1")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "func",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
        Definition {
            name: "x",
            position: Position {
                start_line: 1,
                start_column: 29,
                end_line: 1,
                end_column: 30,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "x",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 32,
                end_line: 1,
                end_column: 33,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
