test-generator/tests/snapshots/rust/test_generated_generic_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
let var4: Vec<i32> = vec![1, 2, 3];

AST:
(source_file
  (let_declaration
    pattern: (identifier "var4")
    type: (generic_type
      type: (type_identifier "Vec")
      type_arguments: (type_arguments
        (primitive_type "i32")
      )
    )
    value: (macro_invocation
      macro: (identifier "vec")
      (token_tree
        (integer_literal "1")
        (integer_literal "2")
        (integer_literal "3")
      )
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "var4",
            position: Position {
                start_line: 1,
                start_column: 5,
                end_line: 1,
                end_column: 9,
            },
            definition_type: VariableDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Vec",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 11,
                end_line: 1,
                end_column: 14,
            },
        },
        Usage {
            name: "vec",
            kind: Identifier,
            position: Position {
                start_line: 1,
                start_column: 22,
                end_line: 1,
                end_column: 25,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
