test-generator/tests/snapshots/rust/test_generated_qualified_type.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
fn test() -> <Vec<i32> as IntoIterator>::Item { 42 }

AST:
(source_file
  (function_item
    name: (identifier "test")
    parameters: (parameters)
    return_type: (scoped_type_identifier "<Vec<i32> as IntoIterator>::Item"
      path: (bracketed_type
        (qualified_type
          type: (generic_type
            type: (type_identifier "Vec")
            type_arguments: (type_arguments
              (primitive_type "i32")
            )
          )
          alias: (type_identifier "IntoIterator")
        )
      )
      name: (type_identifier "Item")
    )
    body: (block
      (integer_literal "42")
    )
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "test",
            position: Position {
                start_line: 1,
                start_column: 4,
                end_line: 1,
                end_column: 8,
            },
            definition_type: FunctionDefinition,
        },
    ],
    dependencies: [],
    usage: [
        Usage {
            name: "Vec",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 15,
                end_line: 1,
                end_column: 18,
            },
        },
        Usage {
            name: "IntoIterator",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 27,
                end_line: 1,
                end_column: 39,
            },
        },
        Usage {
            name: "Item",
            kind: TypeIdentifier,
            position: Position {
                start_line: 1,
                start_column: 42,
                end_line: 1,
                end_column: 46,
            },
        },
    ],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
