test-generator/tests/snapshots/rust/test_generated_static_item.snap
---
source: generated-tests/tests/rust.rs
expression: snapshot_content
---
Source Code:
static STATIC: i32 = 42;

AST:
(source_file
  (static_item
    name: (identifier "STATIC")
    type: (primitive_type "i32")
    value: (integer_literal "42")
  )
)

IR:
IntermediateRepresentation {
    file_path: "<memory>",
    definitions: [
        Definition {
            name: "STATIC",
            position: Position {
                start_line: 1,
                start_column: 8,
                end_line: 1,
                end_column: 14,
            },
            definition_type: ConstDefinition,
        },
    ],
    dependencies: [],
    usage: [],
    analysis_metadata: AnalysisMetadata {
        language: "Rust",
        total_lines: 1,
        analysis_timestamp: "now",
        lintric_version: "0.1.0",
    },
}
